# nonebot-plugin-kawaii-robot

./: README.md  __init__.py  config.py  pyproject.toml  utils.py
nonebot_plugin_kawaii_robot/: __init__.py  __main__.py  config.py  const.py  data_source.py  utils.py
nonebot_plugin_kawaii_robot/resource/: data.json  leaf.json
resource/: leaf.json
